[package]
name = "ohw-wallets"
version = "0.0.1"
edition = "2021"
description = ""
license = ""

[features]
default = ["build", "crypto-rs"]
# Crypto backend selection (mutually exclusive):
# Note: enable both 'crypto-psa' and 'build' features to link against host lib.
crypto-psa = []
crypto-rs = ["dep:sha2", "dep:pbkdf2", "dep:hmac", "dep:ripemd", "dep:k256", "dep:ed25519-dalek", "dep:x25519-dalek", "dep:curve25519-dalek", "dep:p256"]
build = []

[dependencies]
bit-vec = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false }
heapless = { version = "0.8", default-features = false }
zeroize = { version = "1.8", default-features = false }
bs58 = { version = "0.5",features = ["check"],default-features = false }


# If not use psa feature
sha2 = { version = "0.10", default-features = false, optional = true }
pbkdf2 = { version = "0.12", default-features = false, features = ["simple"], optional = true }
hmac = { version = "0.12", default-features = false, optional = true }
ripemd = { version = "0.1.3", default-features = false, optional = true }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"], optional = true }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"], optional = true }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }


[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[build-dependencies]
cmake = { version = "0.1" }
bindgen = { version = "0.71" }
